[package]
name = "procps-sys"
version = "0.1.2"
authors = ["Chang Spivey <chang.spivey@gmail.com>", "MATSUMOTO Ryosuke <matsu1229@gmail.com>"]
description = "Interface with procps library on Linux"
repository = "https://github.com/matsumotory/procps-sys"
readme = "README.md"
keywords = ["linux", "library", "procps", "libprocps", "sys"]
license = "MIT"
links = "procps"
build = "build.rs"

[dependencies]
libc = "0.2.0"

[build-dependencies]
pkg-config = "0.3.2"
